src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}



@media (max-width: 480px) {
  #root {
    max-width: 100vw;
    padding: 0;
    text-align: left; 
  }


  .main-container-style {
    height: -webkit-fill-available;
    width: 100vw;
    max-width: none;
    margin: 0;
    padding: 0;
  }

  
}


@media (max-width: 390px) {
  #root {
    max-width: 100vw;
    padding: 0;
    text-align: left; 
  }

  
  .main-container-style {
    height: -webkit-fill-available;
    width: 100vw;
    max-width: none;
    margin: 0;
    padding: 0;
  }
}

#root {
  max-width: 100vw;
  height: -webkit-fill-available;
  overflow-x: hidden; 
  padding: 0;
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}


.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.cs-message__html-content{
  user-select: text;
}

@media (max-width: 480px) {
  #root {
    max-width: 100vw;
    padding: 0;
    text-align: left; 
  }


  .main-container-style {
    height: -webkit-fill-available;
    width: 100vw;
    max-width: none;
    margin: 0;
    padding: 0;
  }

  
}


@media (max-width: 390px) {
  #root {
    max-width: 100vw;
    padding: 0;
    text-align: left; 
  }

  
  .main-container-style {
    height: 100vh;
    width: 100vw;
    max-width: none;
    margin: 0;
    padding: 0;
  }
}

#root {
  max-width: 100vw;
  height: 100vh;
  padding: 0;
}

.app-header {
  position: relative;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #646cff; 
  padding: 0 2rem;
  padding-left: 15px;
  width: 100%;
  height: 4rem; /* Header height */
  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
  z-index: 1000;
}



.app-header h1 {
  color: #FFFF; 
  font-size: 1.5rem; 
  font-family: 'Roboto', 'Arial', sans-serif; 
  float: right;
}

.logo {
  height: auto;
  width: 6rem;
  padding-bottom: 15px;
  max-width: 100%;
}

.logo:hover {
  transform: scale(1.05);
  transition: transform 0.3s ease-in-out;
}

.app-header .info {
  margin-left: 1rem; 
  display: flex; 
  align-items: left; 
  text-decoration: none; 
  color: #ffffff; 
  justify-content: right;
  font-size: 1rem; 
}

.app-header .info:hover {
  text-decoration: underline; /* Example hover effect */
  cursor: pointer; /* Changes the cursor to indicate a clickable link */
}

.cs-message-input__content-editor, .cs-message__html-content{
  text-align: left;
}

* {
  box-sizing: border-box;
}

:root {
  --input-height: 64px; 
}

#root {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
}

/* Reset margin and padding for all elements */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box; 
}

html, body {
  height: -webkit-fill-available;
  overflow: hidden;
}

:root {
  --app-height: -webkit-fill-available;
}

.App {
  display: flex;
  flex-direction: column;
  padding-top: 4rem; 
  flex: 1;
  overflow-y: auto;
}

.app-header {
  position: fixed;
  top: env(safe-area-inset-top);
  left: 0;
  right: 0;
  z-index: 2;
  height: 4rem;
  overflow: hidden;
}

.MessageList {
  flex-grow: 1;
  padding-top: 4rem;
  margin-bottom: var(--input-height); /* Ensure message list ends before the message input */
  height: calc(100vh - 4rem - var(--input-height) - env(safe-area-inset-bottom)); /* Adjust the 4rem if header height changes */
  
}


.MessageInput {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: var(--input-height);
  z-index: 2;
  margin-bottom: env(safe-area-inset-bottom);
}


.cs-message-input{
  position: fixed;
}
/* Adjustment for iOS safe area */
@supports(padding-bottom: env(safe-area-inset-bottom)) {
  .MessageInput {
    padding-bottom: env(safe-area-inset-bottom); /* Adjust for iPhone X and newer safe area */
  }
}

.cs-message-input__content-editor-wrapper {
  margin-top: 5px;
  margin-bottom: 5px;
}

.MessageInput input {
  text-align: left;
}

body {
  margin: 0;
  padding: 0;
  height: -webkit-fill-available; /* Fills the viewport height */
}

@media (max-height: 900px) {
  .app-header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 2;
    height: 4rem;
    overflow: hidden;
  }

  .App {
    flex-grow: 1;
    overflow-y: auto;
    padding-top: 4rem; 
    padding-bottom: var(--input-height);
    margin-top: 4rem; 
    margin-bottom: 0;
    height: calc(100% - (4rem + var(--input-height)));
  }

  .MessageInput {
    position: fixed;
    left: 0;
    right: 0;
    height: var(--input-height);
    z-index: 2;
    bottom: env(safe-area-inset-bottom);
  }
}


.MessageList {
  padding-top: 4rem; /* Adjust this value to the height of your header */
  padding-bottom: var(--input-height);
  height: calc(100vh - 4rem - var(--input-height) - env(safe-area-inset-bottom));
}

.App {
  padding-top: 4rem; /* Adjust this value to the height of your header */
  flex: 1;
  overflow-y: auto;
}

